--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 #intestazione{
-    /*background-color:;*/
+    width: 100%;
+    height: 50px;
     background-image: url(../img/pattern.png);
-    background-size: 300px;
+    background-repeat: no-repeat; 
+    background-color: blue;
 }
 
 #scritta{
