ho modificato ma ci sono le righe in mezzo nella tabella

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,12 @@
 #scritta{
     color: blue;
 }
+
+.celeste-scuro{
+    background-color:dodgerblue;
+
+}
+
+#head-tabella{
+    background-color: royalblue;
+}
