--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,17 @@
     width: 100%;
     height: 100px;
     background-image: url(../img/pattern.png);
-    background-repeat: no-repeat; 
+    background-repeat: repeat; 
     background-color: blue;
+}
+
+#titolo{
+    font-size: 40px;
+    font-weight: 100;
+}
+
+#immagini{
+    margin-top: 30px;
 }
 
 #logo{
