--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 #intestazione{
     width: 100%;
-    height: 100px;
     background-image: url(../img/pattern.png);
     background-repeat: repeat; 
     background-color: blue;
+    margin-bottom: 40px;
+}
+
+#sezione-principale{
+    padding: 20px;
 }
 
 #titolo{
@@ -12,7 +16,7 @@
 }
 
 #immagini{
-    margin-top: 30px;
+    margin-top: 40px;
 }
 
 #logo{
@@ -33,15 +37,15 @@ th,td{
     text-align: center;
 }
 
-.celeste-scuro{
-    background-color:dodgerblue;
+.riga-body-table{
+    background-color:rgb(142, 194, 246);
     margin:1px;
     padding:1px;
-
 }
 
 #head-tabella{
-    background-color: royalblue;
+    color:white;
+    background-color: rgb(9, 65, 233);
     margin:1px;
     padding:1px;
 }
@@ -50,3 +54,12 @@ th,td{
     background-color: yellow;
 }
 
+#span-footer{
+    color:darkgray;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+#ultima-immagine{
+    margin-top:15px;
+}
