--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -1,5 +1,6 @@
 #container{
     padding: 0px 150px;
+    margin:auto;
 }
 
 #intestazione{
@@ -9,6 +10,8 @@
     background-repeat: repeat; 
     background-color: rgb(86, 159, 241);
     margin-bottom: 40px;
+    padding-left: 120px;
+    padding-top:10px;
 }
 
 #logo{
@@ -49,6 +52,11 @@ th,td{
     width: 5%;
     padding: 5px;
     text-align: center;
+}
+
+ul{
+    padding-inline-start:10px ;/*per mettere più a sinistra i pallini 
+                                dell'elenco*/
 }
 
 #head-tabella{
