--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -90,6 +90,8 @@ ul{
     background-repeat: no-repeat;
     color:white;
     font-weight: 800;
+    padding-top : 10px;
+    padding-left:10px;
 }
 
 #bg-img-2{
@@ -99,4 +101,6 @@ ul{
     color:white;
     font-weight: 800;
     margin-top: 30px;
+    padding-top : 10px;
+    padding-left:10px;
 }
